modules/gdscript/tests/scripts/analyzer/errors/access_level_private_func_outside.gd
@private

class Foo:
    func foo():
        pass

func test():
    Foo.new().foo()
